fix flutter_star_prnt version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_star_prnt:
-    git:
-      url: https://github.com/sumonwd/flutter_star_prnt.git
+  flutter_star_prnt: ^2.4.1
   
   enum_to_string: ^2.0.1
   image: ^4.1.3
